@@ -6,6 +6,7 @@ Mane changes:
 - Enabled most server movement variables. The server host can change most of these in the server settings.
 - Increased sv_airaccelerate from 10 to 150. This allows for easier air control when bunnyhopping.
 - Added a randomizer mode!
+- Your Railgun beam's color will now change based on your primary player color.
 
 Bug Fixes:
 - Fixed a bug where the Railgun doesn't display effects when hitting a player.
